[project]
name = "flow-analysis-comps"
version = "0.1.0"
description = ""
authors = [
    {name = "Simon van Staalduine",email = "simonvanstaalduine@home.nl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpiv (>=0.25.3,<0.26.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "dask (>=2025.1.0,<2026.0.0)",
    # "jupyterlab (>=4.3.4,<5.0.0)",
    "ipympl (>=0.9.6,<0.10.0)",
    "colorcet (>=3.1.0,<4.0.0)",
    # "numba (>=0.61.0,<0.62.0)",
    # "latex (>=0.7.0,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

